# ask-git

./: README.md  pyproject.toml
ask-git/: cli.py
ask_git/: cli.py  ollama_client.py  prompt_builder.py
ask_git/commands/: explain.py  pr_summary.py  summary.py  why.py
ask_git/git_utils/: diff.py  log.py  utils.py
